feat:prima section

--- a/index.html
+++ b/index.html
@@ -21,16 +21,33 @@
         </section>
     </header>
     <!-- /HEADER -->
-    <section>
-        <main class="first-main">
-            
+
+    <!-- FIRST SECTION -->
+    <main class="first-main">
+        <section class="pink-box">
+        </section>
+        <!-- /FIRST SECTION -->
+        <section class="second-main">
+            <div class="blue-box"></div>
+            <div class="rose-box"></div>
+
+        </section>
+        <!-- SECOND SECTION -->
 
 
-        </main>
 
 
 
-    </section>
+
+        <!-- /SECOND SECTION -->
+
+
+
+
+
+    </main>
+
+
     <!-- MAIN -->
     <!-- /MAIN -->
 
