feat:ultima sezione

--- a/index.html
+++ b/index.html
@@ -28,18 +28,39 @@
         </section>
         <!-- /FIRST SECTION -->
         <section class="second-main">
-            <div class="blue-box"></div>
-            <div class="rose-box"></div>
-
+            <div class="row-main">
+                <div class="blue-box"></div>
+                <div class="rose-box"></div>
+            </div>
         </section>
         <!-- SECOND SECTION -->
+        <section class="second-main background">
+            <div class="row-main inverter">
+                <div class="blue-box"></div>
+                <div class="rose-box"></div>
+            </div>
+
+        </section>
+        <!-- 3 SECTION -->
+        <section class="second-main">
+            <div class="row-main">
+                <div class="blue-box"></div>
+                <div class="rose-box"></div>
+            </div>
+        </section>
+        <!-- /3 SECTION -->
+
+        <!-- 4 SECTION -->
+        <section class="gray-box">
+            <div class="row-main">
+                <div class="green-box row-main"></div>
+            </div>
+        </section>
+        <!-- 5 SECTION -->
+        <section class="last-sec">
 
 
-
-
-
-
-        <!-- /SECOND SECTION -->
+        </section>
 
 
 
