feat:quasi finito

--- a/index.html
+++ b/index.html
@@ -56,11 +56,25 @@
                 <div class="green-box row-main"></div>
             </div>
         </section>
+        <!-- /4 SECTION -->
+
         <!-- 5 SECTION -->
-        <section class="last-sec">
-
-
+        <section class="last-secc">
+        <div class="large-square"></div>
+        <div class="small-square"></div>
+        <div class="small-square"></div>
+        <div class="small-square"></div>
+        <div class="small-square"></div>
         </section>
+        
+
+        <!-- FOOTER -->
+        <!-- ULTIMA SECTION  -->
+
+
+
+
+
 
 
 
